--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
-    "lint": "eslint --fix --ext .js,.jsx .",
+    "eslint": "eslint --fix --ext .js,.jsx .",
     "build": "webpack --mode production"
   },
   "repository": {
