--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,5 +19,5 @@ jobs:
         run: npm run eslint
       - name: build
         run: npm run build
-      - name: npm test
-        run: npm run eslint
+      - name: test
+        run: npm test
