--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "https://koskinentht-pokedex.herokuapp.com/" #Must be unique in Heroku
+          heroku_app_name: "https://koskinentht-pokedex.herokuapp.com/" 
           heroku_email: "koskinentht@gmail.com"
