--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "https://koskinentht-pokedex.herokuapp.com/" 
+          heroku_app_name: "koskinentht-pokedex" 
           heroku_email: "koskinentht@gmail.com"
