--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Bump version and push tag
-      if: ${{ github.event_name == 'push' && !contains(github.event.commits.*.message, '#skip')}}
+      if: ${{ github.event_name == 'push' && !contains(github.event.commits[0], '#skip')}}
       uses: anothrNick/github-tag-action@1.33.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
