--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,10 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: deployment
-        if: ${{ github.event_name == 'push' && !contains(github.event.commits[0], '#skip')}}
+        run: |
+          commits=${{join(github.event.commits.*.message, ', ') }}
+          echo $commits
+        if: ${{ github.event_name == 'push' && !contains($commits, '#skip')}}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -45,7 +48,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Bump version and push tag
-      if: ${{ github.event_name == 'push' && !contains(github.event.commits[0], '#skip')}}
+      run: |
+        commits=${{join(github.event.commits.*.message, ', ') }}
+        echo $commits
+      if: ${{ github.event_name == 'push' && !contains($commits, '#skip')}}
       uses: anothrNick/github-tag-action@1.33.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
