--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,10 +31,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: deployment
-        run: |
-          commits=${{join(github.event.commits.*.message, ', ') }}
-          echo $commits
-        if: ${{ github.event_name == 'push' && !contains($commits, '#skip')}}
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ', '), '#skip')}}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -48,10 +45,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Bump version and push tag
-      run: |
-        commits=${{join(github.event.commits.*.message, ', ') }}
-        echo $commits
-      if: ${{ github.event_name == 'push' && !contains($commits, '#skip')}}
+      if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ', '), '#skip')}}
       uses: anothrNick/github-tag-action@1.33.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
