--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm run eslint
       - name: build
         run: npm run build
-      - name: test
+      - name: a_test_job
         run: npm test
       - name: e2e tests
         uses: cypress-io/github-action@v2
@@ -46,9 +46,15 @@ jobs:
     - uses: actions/checkout@v2
     - name: Bump version and push tag
       if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ', '), '#skip')}}
-      uses: anothrNick/github-tag-action@1.33.0
+      uses: anothrNick/github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
         DEFAULT_BUMP: patch
+      - uses: 8398a7/action-slack@v3
+        with:
+          mention: 'here'
+          if_mention: success
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       
