new form for 11.19.

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,7 +9,7 @@ jobs:
   hello_world_job:
     runs-on: ubuntu-18.04
     steps:
-      - name: Say hello
+      - name: hello_world_job
         run: |
           echo "Hello World!"
       - name: Now it is
