--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,6 +28,13 @@ jobs:
           healthcheck: "https://koskinentht-pokedex.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+        - uses: 8398a7/action-slack@v3
+          with:
+            status: ${{ job.status }}
+            fields: author,action,eventName,workflow,job,took
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      if: always()
   tag_version:
     runs-on: ubuntu-18.04
     steps:
@@ -68,6 +75,8 @@ jobs:
           node-version: '12.x'
       - name: npm install
         run: npm install
+      - name: build
+        run: npm run build
       - name: a_test_job
         run: npm test
       - name: e2e tests
