--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,13 +29,13 @@ jobs:
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
       - uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        if_mention: success
-        fields: author,action,eventName,workflow,job,took
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      if: always()
+        with:
+          status: ${{ job.status }}
+          if_mention: success
+          fields: author,action,eventName,workflow,job,took,eventName
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
   tag_version:
     runs-on: ubuntu-18.04
     steps:
@@ -64,7 +64,7 @@ jobs:
         with:
           status: ${{ job.status }}
           if_mention: failure
-          fields: author,action,eventName,workflow,job,took
+          fields: author,action,eventName,workflow,job,took,eventName
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: always()
