--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,13 +28,10 @@ jobs:
           healthcheck: "https://koskinentht-pokedex.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
-      - uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          if_mention: success
-          fields: author,action,eventName,workflow,job,took,eventName
+      - name: testing steps json
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          STEPS_CONTEXT: ${{ toJSON(steps) }}
+        run: echo "$STEPS_CONTEXT"
   tag_version:
     runs-on: ubuntu-18.04
     steps:
@@ -58,14 +55,7 @@ jobs:
       - name: lint
         run: npm run eslint
       - name: build
-        run: npm run build
-      - uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          if_mention: failure
-          fields: author,action,eventName,workflow,job,took,eventName
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: npm run build      
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
