--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,7 @@ jobs:
           rollbackonhealthcheckfailed: true
       - name: testing steps json
         env:
-          STEPS_CONTEXT: ${{ toJSON(steps) }}
+          STEPS_CONTEXT: ${{ toJSON(steps.deploy) }}
         run: echo "$STEPS_CONTEXT"
   tag_version:
     runs-on: ubuntu-18.04
