--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,10 +28,14 @@ jobs:
           healthcheck: "https://koskinentht-pokedex.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
-      - name: testing steps json
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          if_mention: success
+          fields: author,action,eventName,workflow,job,took,eventName,message
         env:
-          STEPS_CONTEXT: ${{ toJson(steps.deploy.conclusion) }}
-        run: echo "$STEPS_CONTEXT"
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: ${{ toJson(steps.deploy.conclusion) == 'success' }}
   tag_version:
     runs-on: ubuntu-18.04
     steps:
@@ -54,8 +58,16 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
-      - name: build
-        run: npm run build      
+      - id: build
+        run: npm run build
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          if_mention: success
+          fields: author,action,eventName,workflow,job,took,eventName,message
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: ${{ toJson(steps.build.conclusion) == 'failure' }} 
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
