--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,7 +35,7 @@ jobs:
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ toJson(steps.deploy.conclusion) == 'success' }}
+        if: ${{ steps.deploy.conclusion == 'success' }}
   tag_version:
     runs-on: ubuntu-18.04
     steps:
@@ -67,7 +67,7 @@ jobs:
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ toJson(steps.build.conclusion) == 'failure' }} 
+        if: ${{ steps.build.conclusion == 'failure' }} 
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
