--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -67,7 +67,8 @@ jobs:
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ steps.build.conclusion == 'failure' }} 
+        if: ${{ steps.build.conclusion == 'failure' || steps.build.conclusion == 'cancelled' }}
+        echo: ${{ steps.build.conclusion }}
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
