test build fail notification

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,15 +60,10 @@ jobs:
         run: npm run eslint
       - id: build
         run: npm run build
-      - uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          if_mention: success
-          fields: author,action,eventName,workflow,job,took,eventName,message
+      - name: test conclusion
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ steps.build.conclusion == 'failure' || steps.build.conclusion == 'cancelled' }}
-        echo: ${{ steps.build.conclusion }}
+          CONCLUSION: ${{ steps.build.conclusion }}
+        run: echo "$CONCLUSION"
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
