test build fail notification

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,10 +60,7 @@ jobs:
         run: npm run eslint
       - id: build
         run: npm run build
-      - name: test conclusion
-        env:
-          CONCLUSION: ${{ steps.build.conclusion }}
-        run: echo "$CONCLUSION"
+      - run: echo ${{ steps.build.conclusion }}
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
