--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-prod": "node app.js",
     "test": "jest",
     "eslint": "eslint --fix --ext .js,.jsx .",
-    "build": "webpack --mode productio",
+    "build": "webpack --mode production",
     "test:e2e": "cypress run"
   },
   "repository": {
