--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,7 +66,7 @@ jobs:
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ steps.build.outcome == 'failure' }}
+        if: ${{ steps.build.outcome == 'success' }}
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
