--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -62,11 +62,11 @@ jobs:
         run: npm run build
       - uses: 8398a7/action-slack@v3
         with:
-          status: ${{ job.status }}
+          status: ${{ job.status == 'failure' }}
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ steps.build.outcome != 'success' }}
+        if: always()
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
