--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -62,7 +62,7 @@ jobs:
         run: npm run build
       - uses: 8398a7/action-slack@v3
         with:
-          status: ${{ job.status == 'failure' }}
+          status: 'failure'
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
