--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,7 +63,7 @@ jobs:
       - uses: 8398a7/action-slack@v3
         with:
           status: 'failure'
-          fields: author,action,eventName,workflow,job,took,eventName,message
+          fields: author,action,eventName,workflow,job,took,eventName
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: always()
