--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -59,13 +59,14 @@ jobs:
         run: npm run eslint
       - id: build
         run: npm run build
+      if: ${{ job.status == 'failure' }}
       - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
           fields: author,action,eventName,workflow,job,took,eventName
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ job.status == 'failure' }}
+        if: always()
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
