--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -59,15 +59,13 @@ jobs:
         run: npm run eslint
       - id: build
         run: npm run build
-      - name: send notification
-        if: ${{ job.status == 'failure' }}
-        uses: 8398a7/action-slack@v3
+      - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
           fields: author,action,eventName,workflow,job,took,eventName
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: always()
+        if: failure()
   a_test_job:
     runs-on: ubuntu-18.04
     steps:
