--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,7 @@ jobs:
           rollbackonhealthcheckfailed: true
       - uses: 8398a7/action-slack@v3
         with:
-          status: 'success'
+          status: ${{ outcome.deploy.outcome }}
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
