--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,8 +16,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - name: npm install
-        run: npm install
       - id: deploy
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ', '), '#skip')}}
         uses: akhileshns/heroku-deploy@v3.12.12
@@ -30,7 +28,7 @@ jobs:
           rollbackonhealthcheckfailed: true
       - uses: 8398a7/action-slack@v3
         with:
-          status: ${{ steps.deploy.outcome }}
+          status: ${{ job.status }}
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
