--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,7 @@ jobs:
           fields: author,action,eventName,workflow,job,took,eventName,message
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: success()
+        if: ${{ always() && steps.deploy.outcome == 'success' }}
   tag_version:
     runs-on: ubuntu-18.04
     steps:
