--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -8,8 +8,8 @@ jobs:
   service_health_check:
     runs-on: ubuntu-18.04
     steps:
-      - name: Check the deployed service URL
-      uses: jtalk/url-health-check-action@v2
-      with:
-        url: https://koskinentht-pokedex.herokuapp.com/
-        max-attempts: 1
+      - name: healthcheck
+        uses: jtalk/url-health-check-action@v2
+        with:
+          url: https://koskinentht-pokedex.herokuapp.com/
+          max-attempts: 1
