--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -9,8 +9,22 @@ jobs:
   service_health_check:
     runs-on: ubuntu-18.04
     steps:
-      - name: healthcheck
+      - id: healthcheck
         uses: jtalk/url-health-check-action@v2
         with:
           url: https://koskinenthtt-pokedex.herokuapp.com/
           max-attempts: 1
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: custom
+          fields: workflow,job,commit,repo,ref,author,took
+          custom_payload: |
+            {
+              attachments: [{
+                color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
+                text: `${process.env.AS_WORKFLOW}\n${process.env.AS_JOB} (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}@${process.env.AS_REF} by ${process.env.AS_AUTHOR} ${{ job.status }} in ${process.env.AS_TOOK}`,
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: ${{ always() && steps.healthcheck.outcome == 'failure' }}
