--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,9 +1,8 @@
 name: Health check
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron:  '55 * * * *'
 
 jobs:
   service_health_check:
