--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,8 +1,12 @@
 name: Health check
 
+# on:
+#   schedule:
+#     - cron:  '55 * * * *'
 on:
-  schedule:
-    - cron:  '55 * * * *'
+  pull_request:
+    branches: [master]
+    types: [opened, synchronize]
 
 jobs:
   service_health_check:
